Add build task for packaging the gui with its own java runtime